[B] Safari + Firefox blend-mode and print layout bug fixes

--- a/src/components/charts/colorMixingTool/color-tool.module.scss
+++ b/src/components/charts/colorMixingTool/color-tool.module.scss
@@ -99,6 +99,9 @@
 }
 
 .button {
+  display: flex !important; /* stylelint-disable-line declaration-no-important */
+  align-items: center;
+  justify-content: center;
   width: 50px;
   height: 50px;
   margin: 15px auto;
@@ -224,23 +227,14 @@
 .image-container {
   position: relative;
   width: $tallestSquareWidget;
-  height: $tallestSquareWidget;
-  // max-width: 600px;
+  max-width: 600px;
   background-color: rgba(0, 0, 0, 0.1);
   border-radius: 3px;
   box-shadow: -4px 7px 10px -2px rgba(0, 0, 0, 0.12),
     4px 7px 10px -2px rgba(0, 0, 0, 0.12), 0 2px 3px -1px rgba(0, 0, 0, 0.24);
 
-  @media print {
-    width: 600px;
-    height: 600px;
-    background-color: transparent;
-  }
-
-  &::after {
-    display: block;
-    padding-bottom: 100%;
-    content: '';
+  &.active-filter {
+    background-color: #000000;
   }
 
   &.col-full-width {
@@ -249,11 +243,34 @@
       100vh - #{$pageNavHeight} - #{$siteHeaderHeight} - #{$colorToolHeading} - #{$minPadding}
     );
   }
+
+  &::after {
+    display: block;
+    padding-bottom: 100%;
+    content: '';
+  }
+
+  .background-image {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: none;
+    width: 100%;
+    height: 100%;
+
+    &.active-filter {
+      display: block;
+    }
+  }
 }
 
 .filter-image {
   position: absolute;
   top: 0;
+  right: 0;
+  bottom: 0;
   left: 0;
   width: 100%;
   height: 100%;
